--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html{
   .center{
     text-align: center;
     margin-bottom: 2em;
-    margin-top: 5em;
+
   }
   
   .body{
